# MPL-Magick-Programming-Language-

./: README.md  docker-compose.yml  frontend.Dockerfile  metadata.json  mpl_compiler.Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
mpl_compiler/: Cargo.toml  build.rs
mpl_compiler/scripts/: sigil_of_resonance.ms  visual_manifest.ms  warding_sigil.ms
mpl_compiler/src/: aether.rs  akashic.rs  ast.rs  bridge.rs  chronos.rs  entropy.rs  evolution.rs  execution.rs  gateway.rs  gematria.rs  graph.rs  grimoire.rs  harmonic.rs  ledger.rs  lexer.rs  lib.rs  main.rs  mesh.rs  metal_ffi.rs  metal_kernel.cpp  mlx_engine.rs  oracle.rs  ovm.rs  parallel.rs  parser.rs  probability.rs  registry.rs  sdk_bridge.rs  sentinel.rs  sigil.rs  signature.rs  sonic.rs  stdlib.rs
src/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/api/sentinel_logs/: route.ts
src/app/api/simulate_intent/: route.ts
src/app/ouija/: page.tsx
src/components/: ChartComponent.tsx  Dashboard.tsx  MplServitorChat.tsx  Planchette.tsx
src/sdk/: mpl_client.ts
