[package]
name = "mpl_compiler"
version = "0.1.0"
edition = "2021"
description = "MPL Core Kernel, Compiler, and Occult Virtual Machine (OVM)"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Future dependencies for Metal interop, matrix multiplication, etc.
# metal = "0.27"
# ndarray = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["tls", "native-tls"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
axum = "0.7"
rand = "0.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2" }
rayon = "1.10"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
cc = "1.0"
